--- a/services/nginx/basics.conf.template
+++ b/services/nginx/basics.conf.template
@@ -5,16 +5,21 @@ server {
     access_log /var/log/nginx/access.log;
     root /usr/src/app;
 
-    error_page 502 503 504 @50x;
+    error_page 502 503 504 404 @50x;
 
     location @50x {
         rewrite ^(.*)$ /maintenance.html break;
     }
 
+    location / {
+        try_files $uri /index.php$is_args$args;
+    }
+
+
     location ~ \.php$ {
         try_files $uri =404;
         fastcgi_split_path_info ^(.+\.php)(/.+)$;
-        fastcgi_pass php:9000;
+        fastcgi_pass app:9000;
         fastcgi_index index.php;
         include fastcgi_params;
         fastcgi_param SCRIPT_FILENAME $document_root$fastcgi_script_name;
