--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -26,7 +26,7 @@ services:
       dockerfile: Dockerfile.development
     volumes:
       - "~/.bash_history:/.bash_history"
-      - "./services/app:/usr/src/appexit"
+      - "./services/app:/usr/src/app"
       - "/tmp:/tmp:delegated"
     depends_on:
       - db
