--- a/services/nginx/basics.conf.template
+++ b/services/nginx/basics.conf.template
@@ -1,5 +1,6 @@
 server {
     listen 8080;
+    server_name _;
     index index.php index.html;
     error_log  /var/log/nginx/error.log;
     access_log /var/log/nginx/access.log;
@@ -23,6 +24,7 @@ server {
         fastcgi_index index.php;
         include fastcgi_params;
         fastcgi_param SCRIPT_FILENAME $document_root$fastcgi_script_name;
+        fastcgi_param SCRIPT_NAME $fastcgi_script_name;
         fastcgi_param PATH_INFO $fastcgi_path_info;
     }
 }
