--- a/services/nginx/basics.conf.template
+++ b/services/nginx/basics.conf.template
@@ -4,7 +4,7 @@ server {
     index index.php index.html;
     error_log  /var/log/nginx/error.log;
     access_log /var/log/nginx/access.log;
-    root /usr/src/app;
+    root /usr/src/app/www;
 
     error_page 502 503 504 404 @50x;
 
