--- a/services/app/Dockerfile.development
+++ b/services/app/Dockerfile.development
@@ -1,9 +1,17 @@
 FROM php:7.2-fpm
 RUN apt-get update && apt-get install -y \
-	libpq-dev
+	libpq-dev \
+    libxml2-dev \
+    zlib1g-dev \
+    && apt-get clean -y
 RUN	docker-php-ext-configure pgsql -with-pgsql=/usr/local/pgsql \
 	&& docker-php-ext-install \
     opcache \
     pdo \
     pdo_pgsql \
-    pgsql 
+    pgsql \
+    dom \
+    mbstring \
+    session \
+    tokenizer \
+    zip \
