with composer slim

--- a/services/app/Dockerfile
+++ b/services/app/Dockerfile
@@ -16,8 +16,7 @@ RUN	docker-php-ext-install \
     tokenizer \
     zip
 
-RUN curl -sS https://getcomposer.org/installer |\
-    php -- --install-dir=/usr/local/bin --filename=composer
+FROM composer
 
 COPY ./composer.json ./composer.lock ./
 
